--- a/public/css/app.css
+++ b/public/css/app.css
@@ -792,6 +792,24 @@ select {
 .mt-8 {
   margin-top: 2rem;
 }
+.mb-20 {
+  margin-bottom: 5rem;
+}
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+.mr-5 {
+  margin-right: 1.25rem;
+}
+.mr-10 {
+  margin-right: 2.5rem;
+}
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
 .line-clamp-3 {
   overflow: hidden;
   display: -webkit-box;
@@ -896,6 +914,9 @@ select {
 }
 .w-full {
   width: 100%;
+}
+.w-10 {
+  width: 2.5rem;
 }
 .min-w-full {
   min-width: 100%;
